[package]
name = "wsaas"
version = "0.1.0"
authors = ["s18alg <s18alg@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tokio-tungstenite = "*"
tokio = { version = "0.2", features = ["full"] }
futures-util="*"